--- a/.github/workflows/windows-tests.yml
+++ b/.github/workflows/windows-tests.yml
@@ -71,4 +71,4 @@ jobs:
           conda list
       - name: Run tests
         shell: bash -l {0}
-        run: pytest kite_provider -vv
+        run: pytest completion_provider -vv
